--- a/cardano-node/docker-compose.yml
+++ b/cardano-node/docker-compose.yml
@@ -21,6 +21,6 @@ services:
       - --config=/config/mainnet-config.json
       - --database-path=/data/db
       - --topology=/config/mainnet-atom-topology.json
-      - --host-addr=0.0.0.0
+      #- --host-addr=0.0.0.0
       - --port=3001
       - --socket-path=/ipc/node.socket
