--- a/cardano-node/docker-compose.yml
+++ b/cardano-node/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   cardano-node: 
     container_name: cardano-node
     image: atomicwallet/cardano-node-base:master-cc3c3cc5-1
-    #network_mode: host
+    network_mode: host
     environment:
       CARDANO_NODE_SOCKET_PATH: /ipc/node.socket
       LD_LIBRARY_PATH: /usr/local/lib:\$LD_LIBRARY_PATH
@@ -20,7 +20,6 @@ services:
       - run
       - --config=/config/mainnet-config.json
       - --database-path=/data/db
-      #- --topology=/config/mainnet-atom-topology.json
       - --topology=/config/mainnet-topology.json
       #- --host-addr=0.0.0.0
       - --port=3001
